deployment/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis-deployment
  namespace: deployment
  labels:
    app: redis
    type: db

spec:
  template:
    metadata:
      name: redis-pod
      namespace: deployment
      labels:
        app: redis
        type: db
    spec:
      containers:
        - name: redis-deployment
          image: redis

  replicas: 2
  selector:
    matchLabels:
      app: redis
      type: db
