deployment/clusterip-frontend.yaml
kind: Service
apiVersion: v1
metadata:
  name: frontend-clusterip
  namespace: deployment
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: frontend-deployment
