deployment/clusterip-mongo.yaml
kind: Service
apiVersion: v1
metadata:
  name: mongo-clusterip
  namespace: deployment
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: mongo
