deployment/clusterip-redis.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-clusterip
  namespace: deployment
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis
