deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: deployment
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: deployment
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: backend-clusterip
                port:
                  number: 5000
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-clusterip
                port:
                  number: 3000
